packages/webassemblyjs/test/fixtures/conversions/type-errors/reinterpret-f64-i64/module.wast
(module (func (result f64) (f64.reinterpret/i64 (i32.const 0))))
